--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 .firstDiv{
     position: relative;
     display: flex;
+    align-items: center;
     justify-content: space-between;
 }
 .home-div{
